--- a/projeto-pronto/css-components/visit-card.component/style.css
+++ b/projeto-pronto/css-components/visit-card.component/style.css
@@ -3,33 +3,45 @@ body{
 }
 
 .visit-card{
-    height: 270px;
+    height: 320px;
     display: flex;
-    font-family: sans-serif;
 }
 
 /* #region Left content area */
 .visit-card .left-content{
-    background: #fff;
+    background: white;
     width: 300px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    text-align: center;
+    padding-top: 32px;
 }
 
 .left-content .thumbnail img{
-    height: 180px;
+    height: 130px;
     border-radius: 100%;
-    margin: 12px;
-    border: 8px solid #f07033;
+    margin: 8px;
+    border: 5px solid #f07033;
 }
-.left-content .name-content span{
+
+.left-content > .name-surname-job > .name-surname {
     font-size: 22px;
     color: #f07033;
-    border-bottom: 6px solid #f07033;
 }
-/* #endregion */
+
+.left-content > .name-surname-job > .job {
+    font-size: 14px;
+}
+
+hr.bar-left {
+border: 0;
+height: 2px;
+background: #f07033;
+margin-left: 64px;
+margin-right: 64px;
+}
+/* #endregion Left content area */
 
 /* #region Right content area */
 .visit-card .right-content{
@@ -38,11 +50,8 @@ body{
     font-size: 16px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 20px;
-}
-
-.right-content table{
-    margin-top: 10px;
 }
 
 .right-content .more-info{
