--- a/projeto-pronto/css-components/visit-card.component/style.css
+++ b/projeto-pronto/css-components/visit-card.component/style.css
@@ -7,7 +7,7 @@ body{
     display: flex;
 }
 
-/* #region Left content area */
+/* #region LEFT CONTENT AREA */
 .visit-card .left-content{
     background: white;
     width: 300px;
@@ -41,67 +41,72 @@ background: #f07033;
 margin-left: 64px;
 margin-right: 64px;
 }
-/* #endregion Left content area */
 
+/* #endregion LEFT CONTET AREA */
 
-/* #region Right content area */
+/* #region RIGHT CONTENT AREA */
 .visit-card > .right-content {
     background: #f07033;
     width: 60px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     padding: 20px;
 }
 
-.right-content > .more-info > div{
-    background: white;
-    padding: 8px;
-    border: 40px;
-    border-color: red;
+table {
+    border-collapse: collapse;
+    text-align: center;
+    vertical-align: middle;
 }
 
-.right-content .more-info i{
-    font-size: 38px;
+.icon-info {
     color: #f07033;
-    margin: 2px;
 }
 
-.right-content h2{
-    margin: 15px 2px 0 2px;
-    color: #fff;
-    border-bottom: 4px solid #fff;
+.right-content td.td-icon {
+    background-color: white;
+    border: 3px solid #f07033;
+    align-items: center;
+    padding: 4px;
+    size: 24px;
 }
 
-// #endregion
-
-.more-info{
-    margin-top: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.more-info .row-info{
-    padding: 10px;
-    display: flex;
-}
-
-.info-text{
+.td-text {
     font-size: 0;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 
+td.td-endereco {
+    background-color: #f07033;
+}
+
+div.text-endereco {
+    color: white;
+    text-size-adjust: 8px;
+}
+
+
+// ANIMATIONS AND TRANSITIONS
 .right-content:hover {
-    width: 250px;
+    width: 240px;
+    transition: .5s;
+    padding-left: 50px;
+}
+
+.right-content:hover .icon-info{
+    font-size: 12px;
     transition: .5s;
 }
 
-.right-content:hover .info-text {
-    font-size: 16px;
+.right-content:hover .td-text {
+    background-color: white;
+    border: 3px solid #f07033;
+    font-size: 12px;
     transition: .5s;
 }
 
-.right-content:hover .more-info i {
-    font-size: 20px;
-    transition: .5s;
-}
+
+
+
