--- a/projeto-pronto/React/src/App.css
+++ b/projeto-pronto/React/src/App.css
@@ -1,26 +1,12 @@
-.App {
-  text-align: center;
-  background: #f5f5f5;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-header{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  height: 80px;
+  background: #78dec4;
+  padding-right: 300px;
+  padding-left: 300px;
 }
 
 .inputArea{
@@ -28,14 +14,9 @@
 }
 
 .cards{
+  background: #aaa;
   display: flex;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  justify-content: center;
+	flex-wrap: wrap;
+  margin: 4px;
 }
