--- a/projeto-pronto/React/src/components/contact-card/contact-card.component.css
+++ b/projeto-pronto/React/src/components/contact-card/contact-card.component.css
@@ -1,11 +1,13 @@
 .visit-card{
     height: 320px;
+    margin-right: 20px;
+    margin-top: 10px;
     display: flex;
 }
 
 /* #region LEFT CONTENT AREA */
 .visit-card .left-content{
-    background: white;
+    background: #FFD9D8;
     width: 300px;
     display: flex;
     flex-direction: column;
@@ -47,17 +49,20 @@ margin-right: 64px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 20px;
+    padding: 22px;
+
 }
 
 table {
     border-collapse: collapse;
     text-align: center;
     vertical-align: middle;
+    margin: -10px;
 }
 
 .icon-info {
     color: #f07033;
+    font-size: 22pt;
 }
 
 .right-content td.td-icon {
@@ -69,9 +74,11 @@ table {
 }
 
 .td-text {
+    align-self: flex-start;
+    text-align: start;
     font-size: 0;
-    padding-left: 24px;
-    padding-right: 24px;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 td.td-endereco {
@@ -86,9 +93,17 @@ div.text-endereco {
 
 /* ANIMATIONS AND TRANSITIONS*/
 .right-content:hover {
-    width: 240px;
+    width: 260px;
     transition: .5s;
-    padding-left: 50px;
+    padding-left: 10px;
+    margin: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.right-content:hover table{
+    margin: 0px;
 }
 
 .right-content:hover .icon-info{
@@ -100,5 +115,22 @@ div.text-endereco {
     background-color: white;
     border: 3px solid #f07033;
     font-size: 12px;
+    font-weight: bold;
     transition: .5s;
+}
+
+
+.name-surname{
+    font-family: 'Raleway', sans-serif;
+}
+
+.job{
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    font-size: 36pt;
+    text-transform: uppercase;
+}
+
+td .text-info{
+    font-family: 'Lato', sans-serif;
 }
