--- a/projeto-pronto/React/src/App.css
+++ b/projeto-pronto/React/src/App.css
@@ -4,9 +4,15 @@
   align-items: center;
   justify-content: center;
   height: 80px;
-  background: #78dec4;
-  padding-right: 300px;
-  padding-left: 300px;
+  padding-right: 20px;
+  padding-left: 10px;
+  border-bottom-right-radius: 40px;
+  background: #7F5541;
+  position: fixed;
+}
+
+.app-header:hover{
+  transition-duration: .5s;
 }
 
 .inputArea{
@@ -14,9 +20,8 @@
 }
 
 .cards{
-  background: #aaa;
+  background: #ffffff;
   display: flex;
   justify-content: center;
 	flex-wrap: wrap;
-  margin: 4px;
 }
