--- a/projeto-pronto/React/src/components/search-input/search.component.css
+++ b/projeto-pronto/React/src/components/search-input/search.component.css
@@ -6,7 +6,7 @@
 }
 
 .search-field{
-    background: #bdc3c7;
+    background: #CC5F2B;
     height: 40px;
     border-radius: 40px;
     padding: 4px;
@@ -18,7 +18,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: #bdc3c7;
+    background: #CC5F2B;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,7 +31,11 @@
 
 .search-field:hover > .search-btn{
     background: #fff;
-    color: #bdc3c7;
+    color: #CC5F2B;
+}
+
+.search-field:focus{
+    width: 240px;
 }
 
 .search-text{
